src/styles.css
main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  color: white;
  font-size: 16px;
}

button {
  font-family: inherit;
  font-size: 16px;
  padding: 8px 24px;
  border: none;
  border-radius: 8px;
  cursor: pointer;
  background-color: cadetblue;
  color: white;
  font-weight: bold;
  display: block;
}

